--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 email-validator==1.1.2
 gunicorn==20.0.4
-python-dotenv==0.16.0
+python-dotenv==0.17.1
+Unidecode==1.2.0
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
