--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,12 @@
-Click==7.0
-Flask==1.1.1
 gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.10.3
-MarkupSafe==1.1.1
-Werkzeug==0.16.0
 email-validator==1.2.1
-# gunicorn==20.1.0
 python-dotenv==0.20.0
 Unidecode==1.3.4
 certifi==2020.6.20
 chardet==3.0.4
-# click==7.1.2
+click==7.1.2
 dominate==2.5.2
-# Flask==1.1.2
+Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
 Flask-CKEditor==0.4.4.1
 Flask-Gravatar==0.5.0
